# gtest-template

./: CMakeLists.txt  README.md  addable.hpp  helpers.cpp  helpers.hpp  helpers_test.cpp  main.cpp  run  run_simple  run_tests
